# garfieldpp

./: CMakeLists.txt  README.md  makefile
CMake/: GarfieldConfig.cmake.in
Doc/UserGuide/: Appendix.tex  Components.tex  Examples.tex  Installation.tex  Introduction.tex  Media.tex  Titlepage.tex  Transport.tex  UserGuide.bib
Examples/: CMakeLists.txt  supratik.C
Examples/GasFile/: generate.C  makefile  read.C
Examples/Voxel/: makefile  savefield.C
Heed/heed++/code/: HeedDeltaElectron.h  HeedParticle.cpp  HeedParticle.h  HeedParticle_BGM.h  HeedPhoton.h  PhotoAbsCSLib.cpp
Heed/wcpplib/geometry/: gparticle.cpp  gparticle.h  mparticle.h  trajestep.cpp  trajestep.h
Heed/wcpplib/particle/: eparticle.h
Include/: AvalancheMC.hh  AvalancheMicroscopic.hh  ComponentAnalyticField.hh  ComponentAnsys121.hh  ComponentAnsys123.hh  ComponentBase.hh  ComponentCST.hh  ComponentComsol.hh  ComponentConstant.hh  ComponentElmer.hh  ComponentFieldMap.hh  ComponentNeBem2d.hh  ComponentNeBem3d.hh  ComponentNeBem3dMap.hh  ComponentTcad2d.hh  ComponentTcad3d.hh  ComponentUser.hh  ComponentUserMapBase.hh  ComponentVoxel.hh  DriftLineRKF.hh  GarfieldConstants.hh  GeometryBase.hh  GeometryRoot.hh  GeometrySimple.hh  MagboltzInterface.hh  Medium.hh  MediumCdTe.hh  MediumConductor.hh  MediumGaAs.hh  MediumGas.hh  MediumMagboltz.hh  MediumPlastic.hh  MediumSilicon.hh  Numerics.hh  OpticalData.hh  PlottingEngine.hh  PlottingEngineRoot.hh  Random.hh  RandomEngine.hh  RandomEngineRoot.hh  (+18 more)
Source/: AvalancheMC.cc  AvalancheMicroscopic.cc  ComponentAnalyticField.cc  ComponentAnsys121.cc  ComponentAnsys123.cc  ComponentBase.cc  ComponentCST.cc  ComponentComsol.cc  ComponentConstant.cc  ComponentElmer.cc  ComponentFieldMap.cc  ComponentNeBem2d.cc  ComponentNeBem3d.cc  ComponentNeBem3dMap.cc  ComponentTcad2d.cc  ComponentTcad3d.cc  ComponentUser.cc  ComponentUserMapBase.cc  ComponentVoxel.cc  DriftLineRKF.cc  GeometryRoot.cc  GeometrySimple.cc  Medium.cc  MediumCdTe.cc  MediumGaAs.cc  MediumGas.cc  MediumMagboltz.cc  MediumSilicon.cc  Numerics.cc  OpticalData.cc  PlottingEngineRoot.cc  Random.cc  RandomEngineRoot.cc  Sensor.cc  Solid.cc  SolidBox.cc  SolidSphere.cc  SolidTube.cc  TetrahedralTree.cc  Track.cc  (+15 more)
